# DD2358

./: .gitmodules
Assignment2_tests/: gemm_test.f90  run_matmul.py
dd2358-tutorial-1/: .gitignore  CMakeLists.txt  Makefile.am  autogen.sh  configure.ac  makefile.simple
dd2358-tutorial-1/include/: power.h  product.h  sum.h
dd2358-tutorial-1/src/: Makefile.am  power.c  product.c  sum.c
dd2358-tutorial-2/axpy/: CMakeLists.txt  Makefile  math_kernels.cc  run.py
dd2358-tutorial-2/ctype/: Makefile  run.py
dd2358-tutorial-2/cython/: .gitignore  Makefile  cython_sum.c  cython_sum.pyx  libsum.pxd  run.py  setup.py
dd2358-tutorial-2/f2py/: Makefile  math_kernels.f90  run.py
dd2358-tutorial-2/fortran_iso_c_binding/: Makefile  main.f90  product.c
dd2358-tutorial-2/pybind11/: Makefile  run.py  sum.h  sum_src.cc
dd2358-tutorial-2/simple_cython/: .gitignore  Makefile  cython_sum.c  cython_sum.pyx  setup.py  sum_src.c
dd2358-tutorial-4/example_app/: Dockerfile  Makefile.am  autogen.sh  configure.ac
dd2358-tutorial-4/example_app/src/: Makefile.am  division.c  main.c
dd2358-tutorial-4/web-docker/: Dockerfile  run.sh
dd2358-tutorial-4/web-with-volume/: Dockerfile  run.sh
dd2358-tutorial-4/wrf-docker/: Dockerfile  run-wrf.sh
dd2358-tutorial-4/wrf-docker/data/: download.sh  namelist.input  namelist.wps
dd2358-tutorial-5/: .gitignore
dd2358-tutorial-5/example_app/: .gitignore  Makefile.am  autogen.sh  configure.ac
dd2358-tutorial-5/example_app/include/: division.h
dd2358-tutorial-5/example_app/src/: power.c
dd2358-tutorial-5/example_app/tests/: Makefile.am  test.cpp
dd2358-tutorial-5/mock_app/: Makefile.am  autogen.sh  configure.ac
dd2358-tutorial-5/mock_app/include/: led_light.h  pin_io.h  print_light_color.h
dd2358-tutorial-5/mock_app/src/: Makefile.am  led_light.c  main.c  pin_io.c  print_light_color.c
dd2358-tutorial-5/mock_app/tests/: Makefile.am  test_color.cpp  test_fixture.hpp  test_led.cpp
dd2358-tutorial-6/: main.c  matmul.h  matmul_base.c  matmul_cblas.c
dd2358-tutorial-6/data/: cblas.gp  mkl.gp  naive.gp  openblas.gp
dd2358-tutorial-7/: .gitignore
dd2358-tutorial-7/mnist/: download_mnist.sh  read_mnist.c  write_mnist.c
dd2358-tutorial-7/particles/: write_particles.c
dd2358-tutorial-8/: mvmult.c  mvmult_papi.c  mvmult_time.c
