# 1. specify the executable target in bin
bin_PROGRAMS = $(top_builddir)/bin/main.out

# 2. specify source file (in this directory)
__top_builddir__bin_main_out_SOURCES = main.c division.c power.c product.c sum.c

# 3. specify the compiler flags
__top_builddir__bin_main_out_CFLAGS = -I$(top_builddir)/include -Wall -g -O3
